# python-forward-property

./: README.rst  forward_property.py  forward_property_mypy_test.py  forward_property_test.py  pyproject.toml
.github/workflows/: main.yml  pages.yml
sphinx-source/: conf.py  index.rst
