[project]
name = "forward-property"
authors = [{ name = "Leonard Crestez", email = "cdleonard@gmail.com" }]
readme = "README.rst"
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
requires-python = ">=3.6"

[project.urls]
Homepage = "https://github.com/cdleonard/python-forward-property"

[project.optional-dependencies]
test = [
    "pytest",
]
hack = [
    "black",
    "pre-commit",
    "flit",
    "mypy",
]

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "forward_property"

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
files = "."

[tool.isort]
profile = "black"
