[project]
name = "forward-property"
authors = [{ name = "Leonard Crestez", email = "cdleonard@gmail.com" }]
readme = "README.rst"
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/cdleonard/python-forward-property"

[project.optional-dependencies]
test = [
    "pytest",
    "typing_extensions",
    "mypy",
    # See https://github.com/davidfritzsche/pytest-mypy-testing/issues/35
    "pytest-mypy-testing@git+https://github.com/davidfritzsche/pytest-mypy-testing@031514ff6ecd5bdf4d11ff238c14d4801b5e47f3",
]
hack = [
    "black",
    "pre-commit",
    "flit",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
]

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "forward_property"

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
files = "."
# Exclude tests for mypy itself
exclude = "_mypy_test.py"

[tool.isort]
profile = "black"
